--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "immu-js",
+  "name": "koyo",
   "version": "0.1.0",
-  "description": "Object and collection utilities, inspired by the Clojure core API",
+  "description": "Object and collection utilities, inspired by the Clojure core API.",
   "main": "core.js",
   "keywords": [
     "immutable",
@@ -24,10 +24,10 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/rksm/immu-js"
+    "url": "https://github.com/rksm/koyo"
   },
   "bugs": {
-    "url": "https://github.com/rksm/immu-js/issues"
+    "url": "https://github.com/rksm/koyo/issues"
   },
-  "homepage": "https://github.com/rksm/immu-js"
+  "homepage": "https://github.com/rksm/koyo"
 }
