--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "Robert Krahn",
   "license": "MIT",
   "devDependencies": {
+    "doc-comments": "^0.1.1",
     "expect.js": "^0.3.1",
     "lively.lang": "^0.4.4",
     "mocha": "^2.3.2",
@@ -18,10 +19,9 @@
     "phantomjs": "^1.9.7-15"
   },
   "scripts": {
-    "test": "node_modules/mocha/bin/mocha tests/*-test.js && node_modules/mocha-phantomjs/bin/mocha-phantomjs tests/run-tests.html"
+    "test": "node_modules/mocha/bin/mocha tests/*-test.js && node_modules/mocha-phantomjs/bin/mocha-phantomjs tests/run-tests.html",
+    "doc": "node -e \"require('doc-comments')({intoFiles: false, files: ['core.js']})\""
   },
-  "author": "Robert Krahn",
-  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "https://github.com/rksm/koyo"
