--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "lively.lang": "^0.4.4",
     "mocha": "^2.3.2",
     "mocha-phantomjs": "^3.6.0",
-    "phantomjs": "^1.9.7-15"
+    "phantomjs": "1.9.7-15"
   },
   "scripts": {
     "test": "node_modules/mocha/bin/mocha tests/*-test.js && node_modules/mocha-phantomjs/bin/mocha-phantomjs tests/run-tests.html",
